Bugfix | Fixed overlapping layout

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,1 +1,1 @@
-p { color: white; z-index: 1;}
+p { color: rgb(161, 32, 32); z-index: 1;}
