--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,8 @@
     font-family: "Raleway", sans-serif;
 }
 
+/* img{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+} */
