--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,7 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-img{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
 .presentation {
-    position: absolute;
+    /* position: absolute; */
     color: white;  
     top: 9.3%;
     width: 100vw;
@@ -35,6 +29,20 @@ img{
     letter-spacing: 1px;
     text-align: center;
     
+}
+
+#presentation {
+  background-image: url("../../assets/img/background.jpeg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: 100vh;
+
+  /* background-color: rgb(0 0 0 / 80%); */
+   
+   
+  
+
 }
 
 /* -==== Icon ====- */
